background home animation

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,4 @@
 @import './base/reset.css';
 @import './components/home/buttons.css';
 @import './components/home/quiz.css';
+@import './components/home/background.css';
