--- a/src/styles/components/home/buttons.css
+++ b/src/styles/components/home/buttons.css
@@ -2,22 +2,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    margin-top: 20px;
+    gap: 1.25rem;
+    margin-top: 1.25rem;
 }
 
 .home__button {
     font-family: monospace;
     font-size: 1rem;
-    background-color: #007bff;
-    color: white;
-    padding: 15px 30px;
+    background-color: #77daff;
+    color: #333;
+    padding: .9375rem 1.875rem;
     border: none;
-    border-radius: 5px;
+    border-radius: .3125rem;
     cursor: pointer;
     text-decoration: none;
 }
 
 .home__button:hover {
-  background-color: #0056b3;
+    background-color: #0af;
+    color: #fff;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
