--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,3 +5,4 @@
 @import './components/game/title.css';
 @import './components/game/playertitle.css';
 @import './components/game/progress.css';
+@import './components/game/header.css';
