--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,3 +6,4 @@
 @import './components/game/playertitle.css';
 @import './components/game/progress.css';
 @import './components/game/header.css';
+@import './components/game/buttons.css';
