--- a/src/styles/components/game/progress.css
+++ b/src/styles/components/game/progress.css
@@ -1,7 +1,6 @@
    body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 20px;
 }
 
 .quiz__game {
@@ -11,7 +10,8 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    gap: 20px;
+    gap: 6rem;
+    padding-bottom: 6rem;
 }
 
 .progress {
