--- a/src/styles/components/game/progress.css
+++ b/src/styles/components/game/progress.css
@@ -1,31 +1,37 @@
-   body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-}
-
-.quiz__game {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    gap: 6rem;
-    padding-bottom: 6rem;
-}
-
 .progress {
     position: relative;
     display: flex;
     justify-content: space-between;
-    width: 400px;
+    width: 500px;
     padding: 0 10px;
+}
+
+.progress--player1 {
+    .progress__div.completed {
+        background: #4B81BD;
+    }
+    .progress__div.current {
+        background: white;
+        border: 2px solid #4B81BD;
+        transform: scale(1.2);
+    }
+}
+
+.progress--player2 {
+    .progress__div.completed {
+        background: #bd4b4b;
+    }
+    .progress__div.current {
+        background: white;
+        border: 2px solid #bd4b4b;
+        transform: scale(1.2);
+    }
 }
 
 .progress::before {
     content: '';
     position: absolute;
-    top: 7px;
+    top: 12px;
     left: 15px;
     right: 15px;
     height: 2px;
@@ -35,7 +41,7 @@
 
 .progress__line {
     position: absolute;
-    top: 7px;
+    top: 12px;
     left: 15px;
     height: 2px;
     background-color: #4B81BD;
@@ -45,8 +51,8 @@
 
 .progress__div {
     position: relative;
-    width: 15px;
-    height: 15px;
+    width: 25px;
+    height: 25px;
     background: #fff;
     border: 2px solid #ACACA6;
     border-radius: 50%;
@@ -54,16 +60,3 @@
     z-index: 2;
 }
 
-.progress__div.current {
-    border: 2px solid #4B81BD;
-    transform: scale(1.2);
-}
-
-.progress__div.completed {
-    background: #4B81BD;
-    border: 2px solid #4B81BD;   
-}
-
-.progress__div:hover {
-    transform: scale(1.2);
-}
