--- a/src/styles/components/home/buttons.css
+++ b/src/styles/components/home/buttons.css
@@ -1,4 +1,4 @@
-.home__buttons {
+.buttons {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +6,7 @@
     margin-top: 1.25rem;
 }
 
-.home__button {
+.button {
     font-family: monospace;
     font-size: 1rem;
     background-color: #77daff;
@@ -18,7 +18,7 @@
     text-decoration: none;
 }
 
-.home__button:hover {
+.button:hover {
     background-color: #0af;
     color: #fff;
     transition: background-color 0.3s ease, color 0.3s ease;
