--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,3 +7,8 @@
 @import './components/game/progress.css';
 @import './components/game/header.css';
 @import './components/game/buttons.css';
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+}
