--- a/src/styles/components/game/title.css
+++ b/src/styles/components/game/title.css
@@ -8,6 +8,10 @@
     text-align: center;
 }
 
+.quiz__content {
+    font-size: 1.5rem;
+}
+
 .quiz__question {
     font-size: 2rem;
     font-weight: 500;
