--- a/src/styles/components/game/header.css
+++ b/src/styles/components/game/header.css
@@ -1,7 +1,14 @@
 .header {
+    display: flex;
+    justify-content: space-between;
+    margin: 1.5rem 2rem;
+}
+
+.header--game {
     position: fixed;
     top: 1.5rem;
     right: 2rem;
+    margin: 0;
     z-index: 100;
 }
 
