--- a/src/styles/components/game/progress.css
+++ b/src/styles/components/game/progress.css
@@ -1,6 +1,8 @@
 :root {
     --player1-color: #4B81BD;
     --player2-color: #bd4b4b;
+    --border-color: #7e7e7e;
+    --background-color: #efefef;
 }
 
 .progress {
@@ -16,7 +18,7 @@
         background: var(--player1-color);
     }
     .progress__step--current {
-        background: white;
+        background: var(--background-color);
         border: 2px solid var(--player1-color);
         transform: scale(1.2);
     }
@@ -27,7 +29,7 @@
         background: var(--player2-color);
     }
     .progress__step--current {
-        background: white;
+        background: var(--background-color);
         border: 2px solid var(--player2-color);
         transform: scale(1.2);
     }
@@ -40,7 +42,7 @@
     left: 15px;
     right: 15px;
     height: 2px;
-    background-color: #ACACA6;
+    background-color: var(--border-color);
     z-index: 0;
 }
 
@@ -49,7 +51,7 @@
     width: 25px;
     height: 25px;
     background: #fff;
-    border: 2px solid #ACACA6;
+    border: 2px solid var(--border-color);
     border-radius: 50%;
     transition: all 0.3s ease;
     z-index: 2;
