--- a/src/styles/tutorial.css
+++ b/src/styles/tutorial.css
@@ -6,7 +6,7 @@
 
 .tutorial__image {
     box-shadow: #00000059 0px 5px 15px;
-    max-width: 40rem;
+    max-width: 45rem;
     border-radius: 0.5rem;
 }
 
@@ -15,6 +15,14 @@
     color: #0af;
     text-decoration: none;
     font-weight: 600;
+}
+
+.step {
+    margin-top: 5rem;
+}
+
+.step__item {
+    margin-top: 3rem;
 }
 
 pre code {
@@ -26,7 +34,7 @@ pre code {
     max-width: 55rem;
     max-height: 40rem;
     padding: 1rem;
-    overflow-x: scroll;
+    overflow-y: scroll;
     font-family: monospace;
     font-size: 14px;
     line-height: 1.5;
@@ -34,6 +42,10 @@ pre code {
   
 .tag {
     color: #679AD2;
+}
+
+.var {
+    color: #70BFF9;
 }
 
 .attr {
@@ -58,4 +70,8 @@ pre code {
 
 .value {
     color: #BACDAB;
+}
+
+.symbol {
+    color: #CD78D4;
 }
