--- a/src/styles/tutorial.css
+++ b/src/styles/tutorial.css
@@ -1,7 +1,6 @@
 .tutorial {
     font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #e8e8e8;
 }
 
 .tutorial__image {
@@ -79,4 +78,31 @@ pre code {
 
 .symbol {
     color: #CD78D4;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    position: relative;
+}
+
+.header__title {
+    margin: 0;
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+}
+
+.header__link--right {
+    position: absolute;
+    right: 1rem;
+}
+
+.header__icon {
+    width: 2rem;
+    height: 2rem;
 }
