--- a/src/styles/tutorial.css
+++ b/src/styles/tutorial.css
@@ -188,15 +188,15 @@ pre code {
   line-height: 1.6;
 }
 
-.step{
-    max-width: 90%;
+.step {
+  max-width: 90%;
   margin: 0 auto;
   padding: 2rem;
   line-height: 1.6;
 }
 
-.step__title{
-    font-size: 1.5rem;
+.step__title {
+  font-size: 1.5rem;
   color: #333;
   font-weight: bold;
   display: inline;
@@ -204,15 +204,31 @@ pre code {
   padding-bottom: 0.5rem;
 }
 
-.step__text{
-    line-height: 1.8;
+.step__text {
+  line-height: 1.8;
   margin-top: 2.5rem;
   color: #333;
 }
 
-.step__item{
-    margin-top: 2rem;
+.step__item {
+  margin-top: 1rem;
   color: #333;
   font-size: 1.2rem;
   line-height: 1.8;
+}
+
+.tutorial__image {
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.step__subtitle {
+  font-size: 1.3rem;
+  color: #333;
+  font-weight: bold;
+  display: inline;
+}
+
+.step__content {
+  margin-top: 2rem;
 }
