--- a/src/styles/tutorial.css
+++ b/src/styles/tutorial.css
@@ -26,6 +26,7 @@
 .step__item {
   margin-top: 4rem;
   line-height: 2rem;
+  position: relative;
 }
 
 pre {
@@ -253,6 +254,29 @@ pre code {
 
 .step__content {
   margin-top: 2rem;
+}
+
+.step__copy {
+  margin-top: 0.5rem;
+  font-size: 1.2rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: rgb(107, 107, 107);
+  transition: color 100ms ease;
+  &:hover {
+    color: rgb(212, 212, 212);
+    border-bottom: 2px solid #0af;
+  }
+}
+
+pre:has(.step__copy) {
+  background-color: rgb(19, 19, 19);
+  border-radius: 0.25rem;
+  width: fit-content;
 }
 
 .nav {
