--- a/src/styles/tutorial.css
+++ b/src/styles/tutorial.css
@@ -31,6 +31,7 @@
 
 pre {
   margin-bottom: 0.5rem;
+  position: relative;
 }
 
 pre code {
@@ -263,6 +264,8 @@ pre code {
   border: none;
   cursor: pointer;
   position: absolute;
+  right: 0;
+  margin-right: 1rem;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   color: rgb(107, 107, 107);
